--- a/de/index.html
+++ b/de/index.html
@@ -5,12 +5,10 @@
         <meta name="viewport" content="width=device-width, initial-scale=1.0"> 
         <title>Danziger Chronograf – Strona Główna</title>         
         <meta name="description" content="Danziger Chronograf – redakcyjny portal lokalny z historią, poradami i przewodnikiem przez Trójmiasto."> 
-        <!-- Google Fonts for Playfair Display (for header) -->         
         <link rel="preconnect" href="https://fonts.googleapis.com"> 
         <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin> 
         <link href="css/theme.css" rel="stylesheet" type="text/css"> 
         <link href="https://fonts.googleapis.com/css2?family=Playfair+Display:wght@400;700&display=swap" rel="stylesheet"> 
-        <!-- Google Fonts for Oswald (for main menu) -->         
         <link href="https://fonts.googleapis.com/css2?family=Oswald:wght@400;700&display=swap" rel="stylesheet"> 
         <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=ABeeZee&display=swap"> 
         <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=ADLaM+Display&display=swap"> 
@@ -25,13 +23,11 @@
     <body> 
         <header> 
             <button id="menu-toggle">☰</button>             
-            <!-- Hamburger menu moved to the left -->             
             <button id="search-toggle"> 
                 <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24"> 
                     <path d="M15.5 14h-.79l-.28-.27A6.471 6.471 0 0 0 16 9.5 6.5 6.5 0 1 0 9.5 16c1.61 0 3.09-.59 4.23-1.57l.27.28v.79l5 4.99L20.49 19l-4.99-5zm-6 0C7.01 14 5 11.99 5 9.5S7.01 5 9.5 5 14 7.01 14 9.5 11.99 14 9.5 14z"/> 
                 </svg>                 
-            </button>             
-            <!-- Header title and logo as a clickable link to index.html -->             <a href="index.html" class="header-link"> <h1 style="font-family: 'Libre Baskerville', serif; font-size: 14px; text-transform: uppercase;">GDAŃSKI&nbsp;<img src="https://i.postimg.cc/J4MBqtsY/sw-akt-tlo.jpg" alt="Obraz Logo Danziger Chronograf">&nbsp;REPORTER</h1> </a> 
+            </button>             <a href="index.html" class="header-link"> <h1 style="font-family: 'Libre Baskerville', serif; font-size: 14px; text-transform: uppercase;">GDAŃSKI&nbsp;<img src="https://i.postimg.cc/J4MBqtsY/sw-akt-tlo.jpg" alt="Obraz Logo Danziger Chronograf">&nbsp;REPORTER</h1> </a> 
         </header>         
         <nav class="main-nav"> 
             <ul> 
@@ -39,15 +35,15 @@
                 </li>                 
                 <li> <a href="prawo.html" style="font-family: 'Oswald', sans-serif; font-size: 12px;">PRAWO</a> 
                 </li>                 
-                <li> <a href="lokalnie.html" style="font-size: 12px;">LOKALNIE</a> 
+                <li> <a href="lokalnie.html" style="font-size: 12px; font-family: 'Oswald', sans-serif;">LOKALNIE</a> 
                 </li>                 
-                <li> <a href="dobrze.html" style="font-size: 12px;">DOBRZE NA DZIŚ</a> 
+                <li> <a href="dobrze.html" style="font-size: 12px; font-family: 'Oswald', sans-serif;">DOBRZE NA DZIŚ</a> 
                 </li>                 
-                <li> <a href="notpl.html" style="font-size: 12px;">OBYWATELE NIE-PL</a> 
+                <li> <a href="notpl.html" style="font-size: 12px; font-family: 'Oswald', sans-serif;">OBYWATELE NIE-PL</a> 
                 </li>                 
-                <li> <a href="kartka.html" style="font-size: 12px;">KARTKA Z HISTORII</a> 
+                <li> <a href="kartka.html" style="font-size: 12px; font-family: 'Oswald', sans-serif;">KARTKA Z HISTORII</a> 
                 </li>                 
-                <li> <a href="de/chronograf.html" style="font-size: 12px;">DANZIGER CHRONOGRAF</a> 
+                <li> <a href="de/chronograf.html" style="font-size: 12px; font-family: 'Oswald', sans-serif;">DANZIGER CHRONOGRAF</a> 
                 </li>                 
             </ul>             
         </nav>         
@@ -70,7 +66,6 @@
                 </li>                 
             </ul>             
         </div>         
-        <!-- Kontener na gadżety mobilne - WIDOCZNY TYLKO NA MOBILE -->         
         <div class="mobile-top-gadgets-container"> 
             <iframe src="swiss.html" title="Swiss Railway Clock" class="clock-iframe" scrolling="no" onload="console.log('swiss.html loaded successfully in iframe');" onerror="console.error('Error loading swiss.html in iframe');"> 
 </iframe>             
@@ -116,38 +111,38 @@ zintegrowanego podejścia. W 1945 roku podjęto pierwsze próby administracyjneg
 </div>                 
                 <section id="danziger-chronograf" class="article"> <a href="de/chronograf.html" style="text-decoration: none; color: inherit; display: block;"> <h2 style="font-family: 'Libre Baskerville', serif; font-size: 14px; font-weight: bold; text-transform: uppercase;">Danziger Chronograf</h2> <p style="text-transform: none; font-family: 'Merriweather', serif; font-size: 14px; line-height: 1;"><b>Triebwagen 8: lebende Gedächtnismaschine der Niederstadt.&nbsp;</b>Er ist weder jung noch geschmeidig. Er knarrt, er wankt, er surrt. Und doch fährt er weiter. Jahrzehnte schon kennt er jeden Winkel &ndash; seit jenem Morgen, da die Allee noch Weidengasse hieß. Im Wagen bebt das Blech, summen die Scheiben. Die Passażere geraten unversehens in seinen Takt.Manch einer starrt hinaus: auf Ziegelmauern, auf Brücken, auf Wasser, das immer still war, aber nie teilnahmslos. Wer Orte mit Seele sucht, gerät hier vollends in Bann. Kantige Bürgerhäuser, Kanale, Brücken &ndash; sie künden von einst pulsierender Handelsmacht. Die Motlau umspielt sie jak eine alte Geliebte. Jeder Stein atmet vergangene Zeit.</p> <img src="https://i.postimg.cc/ydxM4rty/tr8-nd.png" alt="Obraz Danziger Chronograf"> </a> 
                 </section>                 
-                <!-- New horizontal separator -->                 
                 <div class="section-separator"></div>                 
-                <!-- Moved footer text into main content area -->                 
                 <div class="editorial-info"> 
                     <p>Redakcja. ul. Nebelgasse 12, Niederstadt, Danzig</p> <a href="kontakt.html" class="contact-btn">Skontaktuj się z nami</a> 
                 </div>                 
             </div>             
             <div class="vertical-strip"></div>             
-            <!-- Sidebar dla desktopu - WIDOCZNY TYLKO NA DESKTOPIE -->             
             <div class="sidebar desktop-sidebar"> 
-                <!-- Kontener dla zegarka i kalendarza (obok siebie) -->                 
                 <div class="clock-calendar-row"> 
-                    <!-- Zegarek -->                     
                     <iframe src="swiss.html" title="Swiss Railway Clock" class="clock-iframe" scrolling="no" onload="console.log('swiss.html loaded successfully in iframe');" onerror="console.error('Error loading swiss.html in iframe');"> 
 </iframe>                     
-                    <!-- Kalendarz po prawej stronie zegarka -->                     
                     <iframe src="cal.html" title="Vintage Calendar" class="calendar-iframe" scrolling="no" onload="console.log('cal.html loaded successfully in iframe');" onerror="console.error('Error loading cal.html in iframe');"> 
+</iframe>                     
+                </div>                 
+                <iframe src="wetter.html" width="100%" height="600" style="border: none; max-width: 280px; display: block; margin: 0 auto;" scrolling="no"></iframe>                 
+                <div class="support-newsletter-section"> 
+                    <iframe src="support.html" width="100%" height="180" style="border: none; max-width: 280px; display: block; margin: 0 auto;" scrolling="no"> 
 </iframe>                     
                 </div>                 
             </div>             
         </div>         
-        <!-- Kontener na gadżety mobilne - WIDOCZNY TYLKO NA MOBILE -->         
-        <div class="mobile-top-gadgets-container"> 
-            <iframe src="swiss.html" title="Swiss Railway Clock" class="clock-iframe" scrolling="no" onload="console.log('swiss.html loaded successfully in iframe');" onerror="console.error('Error loading swiss.html in iframe');"> 
-</iframe>             
-            <iframe src="cal.html" title="Vintage Calendar" class="calendar-iframe" scrolling="no" onload="console.log('cal.html loaded successfully in iframe');" onerror="console.error('Error loading cal.html in iframe');"> 
-</iframe>             
+        <div class="mobile-bottom-gadgets-container"> 
+            <iframe src="wetter.html" width="100%" height="600" style="border: none; max-width: 280px; display: block; margin: 0 auto;" scrolling="no"></iframe>             
+            <div class="support-newsletter-section"> 
+                <iframe src="support.html" width="100%" height="180" style="border: none; max-width: 280px; display: block; margin: 0 auto;" scrolling="no"> 
+</iframe>                 
+            </div>             
+            <div class="ads google sidebar-bottom-ad"> 
+                <p>Reklama Google (na dole sidebara)</p> 
+            </div>             
         </div>         
-        <!-- Original footer, now empty or can be removed if no other content is needed here -->         
         <footer> 
-            <!-- Content moved to main-content -->             
-        </footer>         
+</footer>         
         <script>
     // Offcanvas menu script
     const toggle = document.getElementById('menu-toggle');
