--- a/de/chronograf.html
+++ b/de/chronograf.html
@@ -21,57 +21,42 @@
                 <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24"> 
                     <path d="M15.5 14h-.79l-.28-.27A6.471 6.471 0 0 0 16 9.5 6.5 6.5 0 1 0 9.5 16c1.61 0 3.09-.59 4.23-1.57l.27.28v.79l5 4.99L20.49 19l-4.99-5zm-6 0C7.01 14 5 11.99 5 9.5S7.01 5 9.5 5 14 7.01 14 9.5 11.99 14 9.5 14z"/> 
                 </svg>                 
-            </button>             
-            <a href="../index.html" class="header-link">  <h1 style="font-family: 'Libre Baskerville', serif; font-size: 14px;">GDAŃSKI <img src="https://i.postimg.cc/J4MBqtsY/sw-akt-tlo.jpg" alt="Obraz Logo Danziger Chronograf"> REPORTER</h1>  </a> 
+            </button>             <a href="../index.html" class="header-link"> <h1 style="font-family: 'Libre Baskerville', serif; font-size: 14px;">GDAŃSKI <img src="https://i.postimg.cc/J4MBqtsY/sw-akt-tlo.jpg" alt="Obraz Logo Danziger Chronograf"> REPORTER</h1> </a> 
         </header>         
         <nav class="main-nav"> 
             <ul> 
-                <li>
-                    <a href="../stand.html">STANDPUNKT</a>
+                <li> <a href="../stand.html" style="font-family: 'Oswald', sans-serif; font-size: 12px;">STANDPUNKT</a> 
                 </li>                 
-                <li>
-                    <a href="../prawo.html">PRAWO</a>
+                <li> <a href="../prawo.html" style="font-family: 'Oswald', sans-serif; font-size: 12px;">PRAWO</a> 
                 </li>                 
-                <li>
-                    <a href="../lokalnie.html">LOKALNIE</a>
+                <li> <a href="../lokalnie.html" style="font-family: 'Oswald', sans-serif; font-size: 12px;">LOKALNIE</a> 
                 </li>                 
-                <li>
-                    <a href="../dobrze.html">DOBRZE NA DZIŚ</a>
+                <li> <a href="../dobrze.html" style="font-family: 'Oswald', sans-serif; font-size: 12px;">DOBRZE NA DZIŚ</a> 
                 </li>                 
-                <li>
-                    <a href="../notpl.html">OBYWATELE NIE PL</a>
+                <li> <a href="../notpl.html" style="font-family: 'Oswald', sans-serif; font-size: 10px; line-height: 1px;">OBYWATELE NIE PL</a> 
                 </li>                 
-                <li>
-                    <a href="../kartka.html">KARTKA Z HISTORII</a>
+                <li> <a href="../kartka.html" style="font-family: 'Oswald', sans-serif; font-size: 10px; line-height: 0.5;">KARTKA Z HISTORII</a> 
                 </li>                 
-                <li>
-                    <a href="./chronograf.html">DANZIGER CHRONOGRAF</a>
+                <li> <a href="./chronograf.html" style="font-family: 'Oswald', sans-serif; font-size: 10px; line-height: 1;">DANZIGER CHRONOGRAF</a> 
                 </li>                 
             </ul>             
         </nav>         
         <div id="menu-overlay"></div>         
         <div id="offcanvas-menu"> 
             <ul> 
-                <li>
-                    <a href="../stand.html">STANDPUNKT</a>
+                <li> <a href="../stand.html">STANDPUNKT</a> 
                 </li>                 
-                <li>
-                    <a href="../prawo.html">PRAWO</a>
+                <li> <a href="../prawo.html">PRAWO</a> 
                 </li>                 
-                <li>
-                    <a href="../lokalnie.html">LOKALNIE</a>
+                <li> <a href="../lokalnie.html">LOKALNIE</a> 
                 </li>                 
-                <li>
-                    <a href="../dobrze.html">DOBRZE NA DZIŚ</a>
+                <li> <a href="../dobrze.html">DOBRZE NA DZIŚ</a> 
                 </li>                 
-                <li>
-                    <a href="../notpl.html">OBYWATELE NIE PL</a>
+                <li> <a href="../notpl.html">OBYWATELE NIE PL</a> 
                 </li>                 
-                <li>
-                    <a href="../kartka.html">KARTKA Z HISTORII</a>
+                <li> <a href="../kartka.html">KARTKA Z HISTORII</a> 
                 </li>                 
-                <li>
-                    <a href="./chronograf.html">DANZIGER CHRONOGRAF</a>
+                <li> <a href="./chronograf.html">DANZIGER CHRONOGRAF</a> 
                 </li>                 
             </ul>             
         </div>         
@@ -84,7 +69,7 @@
         <div class="main-layout-wrapper"> 
             <div class="main-content"> 
                 <div class="ads google article-top-ad"> 
-                    </div>                 
+</div>                 
                 <h1 class="article-title" style="font-family: 'Merriweather', serif; font-size: 24px;">Triebwagen 8: lebende Gedächtnismaschine der Niederstadt</h1> 
                 <p class="lead" style="font-family: 'Merriweather', serif; font-size: 16px;">Er ist weder jung noch geschmeidig. Er knarrt, er wankt, er surrt. Und doch fährt er weiter</p> 
                 <p class="author-date">Autor: Olen Kieruch| Data publikacji: 26 lipca 2025</p> 
@@ -117,15 +102,10 @@ Am Abend ergießt się Licht über Gassen, Steine, Gleise. Triebwagen 8 verweilt
                     <iframe src="cal.html" title="Vintage Calendar" class="calendar-iframe" scrolling="no"> 
 </iframe>                     
                 </div>                 
-                <iframe src="wetter.html" width="100%" height="600" style="border: none; max-width: 280px; display: block; margin: 0 auto;" scrolling="no"></iframe>
+                <iframe src="wetter.html" width="100%" height="600" style="border: none; max-width: 280px; display: block; margin: 0 auto;" scrolling="no"></iframe>                 
                 <div class="support-newsletter-section"> 
-                    <iframe 
-                      src="support.html" 
-                      width="100%" 
-                      height="180" 
-                      style="border: none; max-width: 280px; display: block; margin: 0 auto;" 
-                      scrolling="no">
-                    </iframe>
+                    <iframe src="support.html" width="100%" height="180" style="border: none; max-width: 280px; display: block; margin: 0 auto;" scrolling="no"> 
+</iframe>                     
                 </div>                 
                 <div class="ads google sidebar-bottom-ad"> 
                     <p>Reklama Google (na dole sidebara)</p> 
@@ -133,22 +113,17 @@ Am Abend ergießt się Licht über Gassen, Steine, Gleise. Triebwagen 8 verweilt
             </aside>             
         </div>         
         <div class="mobile-bottom-gadgets-container"> 
-            <iframe src="wetter.html" width="100%" height="600" style="border: none; max-width: 280px; display: block; margin: 0 auto;" scrolling="no"></iframe>
+            <iframe src="wetter.html" width="100%" height="600" style="border: none; max-width: 280px; display: block; margin: 0 auto;" scrolling="no"></iframe>             
             <div class="support-newsletter-section"> 
-                <iframe 
-                  src="support.html" 
-                  width="100%" 
-                  height="180" 
-                  style="border: none; max-width: 280px; display: block; margin: 0 auto;" 
-                  scrolling="no">
-                </iframe>
+                <iframe src="support.html" width="100%" height="180" style="border: none; max-width: 280px; display: block; margin: 0 auto;" scrolling="no"> 
+</iframe>                 
             </div>             
             <div class="ads google sidebar-bottom-ad"> 
                 <p>Reklama Google (na dole sidebara)</p> 
             </div>             
         </div>         
         <footer> 
-            </footer>         
+</footer>         
         <script>
     // Offcanvas menu script
     const toggle = document.getElementById('menu-toggle');
