--- a/de/chronograf.html
+++ b/de/chronograf.html
@@ -58,6 +58,10 @@
                 </li>
                 <li> <a href="./chronograf.html">DANZIGER CHRONOGRAF</a>
                 </li>
+                <li><a href="lm.html">LUMEN MUNDI</a></li>
+                <li><a href="west.html">Z ZACHODU</a></li>
+                <li><a href="fin.html">GDAŃSKI PORTFEL</a></li>
+                <li><a href="pixel.html">PIXEL & PLOT: SPRAWDZIMY TO?</a></li>
             </ul>
         </div>
         <div class="mobile-top-gadgets-container">
@@ -79,7 +83,7 @@
                     <p style="">Er ist weder jung noch geschmeidig. Er knarrt, er wankt, er surrt. Und doch fährt er weiter. Jahrzehnte schon kennt er jeden Winkel – seit jenem Morgen, da die Allee noch Weidengasse hieß. Im Wagen bebt das Blech, summen die Scheiben. Die Passagiere geraten unversehens in seinen. Takt.Manch einer starrt hinaus: auf Ziegelmauern, auf Brücken, auf Wasser, das immer still war, aber nie teilnahmslos. Wer Orte mit Seele sucht, gerät hier vollends in Bann. Kantige Bürgerhäuser, Kanäle, Brücken – sie künden von einst pulsierender Handelsmacht. Die Motlau umspielt sie jak eine alte Geliebte. </p>
                     <p style="">Jeder Stein atmet vergangene Zeit. Einst, als die Niederstadt anders war, trug er Fabrikarbeiter, Kaufleute, Menschen, die zwar in Eile, ale nikht hetzend unterwegs waren. Jetzt transportiert er andere – jene, die gedenken, und jene, die entdecken wollen, was kein Reiseführer je verrät. Fassaden ziehen vorbei und flüstern mehr als jede Infotafel. Wer mag zählen, wie viele Gesichter er sah, wie viele er weitertrug, wie viele zurückrief und wie viele weiterzogen, ohne eine Sekunde zu verweilen.
 Die Niederstadt war anders. Wo heute Stille herrscht, tobte einst das Leben. Wo jetzt Feuchtigkeit glitzert, wogten Menschenmassen. Wandel kam nicht als Befehl, sondern schlich heran. Niemand rief „Sanierung“, denn kaum jemand fragte nach Notwendigkeit. Mauern bekleideten sich neu, Gassen empfingen frische Wanderer. Alte Wände schwieg’n, als sei längst alles gesagt.
-Am Abend ergießt się Licht über Gassen, Steine, Gleise. Triebwagen 8 verweilt nicht w der Vergangenheit, er trägt sie fort. Er steht nie still, obwohl er gedenkt i ahnt. Genau dlatego lohnt es sich einzusteigen – um Danzig anders zu sehen, nie verpostkartet, sondern w jener Präsenz, die man na der Haut spürt. </p>
+Am Abend ergießt sich Licht über Gassen, Steine, Gleise. Triebwagen 8 verweilt nicht w der Vergangenheit, er trägt sie fort. Er steht nie still, obwohl er gedenkt i ahnt. Genau dlatego lohnt es sich einzusteigen – um Danzig anders zu sehen, nie verpostkartet, sondern w jener Präsenz, die man na der Haut spürt. </p>
                 </div>
                 <div class="article-actions">
                     <p><a href="#">[ Read on one page ]</a></p>
