--- a/kartka.html
+++ b/kartka.html
@@ -25,19 +25,19 @@
         </header>
         <nav class="main-nav">
             <ul>
-                <li> <a href="stand.html" style="font-family: 'Oswald', sans-serif; font-size: 12px;">STANDPUNKT</a>
+                <li> <a href="stand.html">STANDPUNKT</a>
                 </li>
-                <li> <a href="prawo.html" style="font-family: 'Oswald', sans-serif; font-size: 12px;">PRAWO</a>
+                <li> <a href="prawo.html">PRAWO</a>
                 </li>
-                <li> <a href="lokalnie.html" style="font-family: 'Oswald', sans-serif; font-size: 12px;">LOKALNIE</a>
+                <li> <a href="lokalnie.html">LOKALNIE</a>
                 </li>
-                <li> <a href="dobrze.html" style="font-family: 'Oswald', sans-serif; font-size: 12px;">DOBRZE NA DZIŚ</a>
+                <li> <a href="dobrze.html">DOBRZE NA DZIŚ</a>
                 </li>
-                <li> <a href="notpl.html" style="font-family: 'Oswald', sans-serif; font-size: 12px;">OBYWATELE NIE PL</a>
+                <li> <a href="notpl.html">OBYWATELE NIE PL</a>
                 </li>
-                <li> <a href="kartka.html" style="font-family: 'Oswald', sans-serif; font-size: 12px;">KARTKA Z HISTORII</a>
+                <li> <a href="kartka.html">KARTKA Z HISTORII</a>
                 </li>
-                <li> <a href="de/chronograf.html" style="font-family: 'Oswald', sans-serif; font-size: 12px;">DANZIGER CHRONOGRAF</a>
+                <li> <a href="de/chronograf.html">DANZIGER CHRONOGRAF</a>
                 </li>
             </ul>
         </nav>
