--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
         <title> 
             Danziger Chronograf – Strona Główna
 </title>         
-        <meta content="Danziger Chronograf – redakcyjny portal lokalny z historią, poradami i przewodnikiem przez Trójmiasto." name="description"/> 
+        <meta content="GDAŃSKI REPORTER – redakcyjny portal lokalny z historią, poradami i przewodnikiem przez Trójmiasto." name="description"/> 
         <link href="https://fonts.googleapis.com" rel="preconnect"/> 
         <link crossorigin="" href="https://fonts.gstatic.com" rel="preconnect"/> 
         <link href="css/theme.css" rel="stylesheet" type="text/css"/> 
