--- a/kartka.html
+++ b/kartka.html
@@ -5,7 +5,7 @@
 <meta charset="utf-8"/>
 <meta content="width=device-width, initial-scale=1.0" name="viewport"/>
 <title> 
-            Danziger Chronograf – Tytuł Artykułu
+            GDAŃSKI REPORTER – 8 sierpnia 1925
 </title>
 <meta content="Opis artykułu na stronie sekcji." name="description"/>
 <link href="https://fonts.googleapis.com" rel="preconnect"/>
