--- a/de/chronograf.html
+++ b/de/chronograf.html
@@ -3,7 +3,7 @@
     <head> 
         <meta charset="utf-8"/> 
         <meta content="width=device-width, initial-scale=1.0" name="viewport"/> 
-        <title>Danziger Chronograf – Tytuł Artykułu</title>         
+        <title>DANZIGER REPORTER – Weiße Giganten in Polen – Columbia nicht Pictures</title>         
         <meta content="Opis artykułu na stronie sekcji." name="description"/> 
         <link href="https://fonts.googleapis.com" rel="preconnect"/> 
         <link crossorigin="" href="https://fonts.gstatic.com" rel="preconnect"/> 
