--- a/de/archiwum/richtbrudovum260725.html
+++ b/de/archiwum/richtbrudovum260725.html
@@ -4,7 +4,7 @@
         <meta charset="utf-8"/>
         <meta content="width=device-width, initial-scale=1.0" name="viewport"/>
         <title>
-            Danziger Chronograf – Tytuł Artykułu
+            DANZIGER REPORTER – Bruderferajn von Wilna – Gdynias NGO
 </title>
         <meta content="Opis artykułu na stronie sekcji." name="description"/>
         <link href="https://fonts.googleapis.com" rel="preconnect"/>
