--- a/dobrze.html
+++ b/dobrze.html
@@ -3,7 +3,7 @@
     <head> 
         <meta charset="utf-8"/> 
         <meta content="width=device-width, initial-scale=1.0" name="viewport"/> 
-        <title>Spacer po Neugarten  – Kaszubska jednodniówka</title>         
+        <title>GDAŃSKI REPORTER  – Kaszubska jednodniówka</title>         
         <meta content="Opis artykułu na stronie sekcji." name="description"/> 
         <link href="https://fonts.googleapis.com" rel="preconnect"/> 
         <link crossorigin="" href="https://fonts.gstatic.com" rel="preconnect"/> 
