--- a/archiwum/lokalnie.26.07.25.Festiwal Kina Plenerowego w Sopocie.html
+++ b/archiwum/lokalnie.26.07.25.Festiwal Kina Plenerowego w Sopocie.html
@@ -11,8 +11,8 @@
         <link href="https://fonts.googleapis.com/css2?family=Oswald:wght@400;700&amp;display=swap" rel="stylesheet"/>
         <link href="https://fonts.googleapis.com/css?family=Libre+Baskerville&amp;display=swap" rel="stylesheet"/>
         <link href="https://fonts.googleapis.com/css?family=Merriweather:wght@400;700&amp;display=swap" rel="stylesheet"/>
-        <link href="css/theme.css" rel="stylesheet" type="text/css"/>
-        <link href="css/section.css" rel="stylesheet" type="text/css"/>
+        <link href="../css/theme.css" rel="stylesheet" type="text/css"/>
+        <link href="../css/section.css" rel="stylesheet" type="text/css"/>
     </head>
     <body>
         <header>
@@ -21,53 +21,53 @@
                 <svg viewbox="0 0 24 24" xmlns="http://www.w3.org/2000/svg">
                     <path d="M15.5 14h-.79l-.28-.27A6.471 6.471 0 0 0 16 9.5 6.5 6.5 0 1 0 9.5 16c1.61 0 3.09-.59 4.23-1.57l.27.28v.79l5 4.99L20.49 19l-4.99-5zm-6 0C7.01 14 5 11.99 5 9.5S7.01 5 9.5 5 14 7.01 14 9.5 11.99 14 9.5 14z"></path>
                 </svg>
-            </button>             <a class="header-link" href="index.html"> <h1 style="">GDAŃSKI <img alt="Obraz Logo Danziger Chronograf" src="https://i.postimg.cc/J4MBqtsY/sw-akt-tlo.jpg"/> REPORTER</h1> </a>
+            </button>             <a class="header-link" href="../index.html"> <h1 style="">GDAŃSKI <img alt="Obraz Logo Danziger Chronograf" src="https://i.postimg.cc/J4MBqtsY/sw-akt-tlo.jpg"/> REPORTER</h1> </a>
         </header>
         <nav class="main-nav">
             <ul>
-                <li> <a href="stand.html" style="">STANDPUNKT</a>
+                <li> <a href="../stand.html" style="">STANDPUNKT</a>
                 </li>
-                <li> <a href="prawo.html" style="">PRAWO</a>
+                <li> <a href="../prawo.html" style="">PRAWO</a>
                 </li>
-                <li> <a href="lokalnie.html" style="">LOKALNIE</a>
+                <li> <a href="../lokalnie.html" style="">LOKALNIE</a>
                 </li>
-                <li> <a href="dobrze.html" style="">DOBRZE NA DZIŚ</a>
+                <li> <a href="../dobrze.html" style="">DOBRZE NA DZIŚ</a>
                 </li>
-                <li> <a href="notpl.html" style="">OBYWATELE NIE PL</a>
+                <li> <a href="../notpl.html" style="">OBYWATELE NIE PL</a>
                 </li>
-                <li> <a href="kartka.html" style="">KARTKA Z HISTORII</a>
+                <li> <a href="../kartka.html" style="">KARTKA Z HISTORII</a>
                 </li>
-                <li> <a href="de/chronograf.html" style="">DANZIGER CHRONOGRAF</a>
+                <li> <a href="../de/chronograf.html" style="">DANZIGER CHRONOGRAF</a>
                 </li>
             </ul>
         </nav>
         <div id="menu-overlay"></div>
         <div id="offcanvas-menu">
             <ul>
-                <li> <a href="stand.html">STANDPUNKT</a>
+                <li> <a href="../stand.html">STANDPUNKT</a>
                 </li>
-                <li> <a href="prawo.html">PRAWO</a>
+                <li> <a href="../prawo.html">PRAWO</a>
                 </li>
-                <li> <a href="lokalnie.html">LOKALNIE</a>
+                <li> <a href="../lokalnie.html">LOKALNIE</a>
                 </li>
-                <li> <a href="dobrze.html">DOBRZE NA DZIŚ</a>
+                <li> <a href="../dobrze.html">DOBRZE NA DZIŚ</a>
                 </li>
-                <li> <a href="notpl.html">OBYWATELE NIE PL</a>
+                <li> <a href="../notpl.html">OBYWATELE NIE PL</a>
                 </li>
-                <li> <a href="kartka.html">KARTKA Z HISTORII</a>
+                <li> <a href="../kartka.html">KARTKA Z HISTORII</a>
                 </li>
-                <li> <a href="de/chronograf.html">DANZIGER CHRONOGRAF</a>
+                <li> <a href="../de/chronograf.html">DANZIGER CHRONOGRAF</a>
                 </li>
-                <li><a href="lm.html">LUMEN MUNDI</a></li>
-                <li><a href="west.html">Z ZACHODU</a></li>
-                <li><a href="fin.html">GDAŃSKI PORTFEL</a></li>
-                <li><a href="pixel.html">PIXEL & PLOT: SPRAWDZIMY TO?</a></li>
+                <li><a href="../lm.html">LUMEN MUNDI</a></li>
+                <li><a href="../west.html">Z ZACHODU</a></li>
+                <li><a href="../fin.html">GDAŃSKI PORTFEL</a></li>
+                <li><a href="../pixel.html">PIXEL & PLOT: SPRAWDZIMY TO?</a></li>
             </ul>
         </div>
         <div class="mobile-top-gadgets-container">
-            <iframe class="clock-iframe" scrolling="no" src="swiss.html" title="Swiss Railway Clock">
+            <iframe class="clock-iframe" scrolling="no" src="../swiss.html" title="Swiss Railway Clock">
 </iframe>
-            <iframe class="calendar-iframe" scrolling="no" src="cal.html" title="Vintage Calendar">
+            <iframe class="calendar-iframe" scrolling="no" src="../cal.html" title="Vintage Calendar">
 </iframe>
         </div>
         <div class="main-layout-wrapper">
@@ -101,8 +101,8 @@ Chcesz zostać na dłużej? Sprawdź noclegi w pobliżu Placu Przyjaciół Sopot
                 </div>
                 
 <div class="article-actions">
-    <a href="index.html" role="button" style="font-weight: 400;">Start page</a>
-    <a href="comments.html" role="button" style="font-weight: 400;">Comment</a>
+    <a href="../index.html" role="button" style="font-weight: 400;">Start page</a>
+    <a href="../comments.html" role="button" style="font-weight: 400;">Comment</a>
     <a href="#" onclick="navigator.share({url: window.location.href})" role="button" style="font-weight: 400;">Share</a>
     <a href="#" onclick="navigator.clipboard.writeText(window.location.href)" role="button" style="font-weight: 400;">Copy link</a>
     <a href="#" onclick="window.print()" role="button" style="font-weight: 400;">Print</a>
@@ -110,20 +110,20 @@ Chcesz zostać na dłużej? Sprawdź noclegi w pobliżu Placu Przyjaciół Sopot
 
                 <div class="section-separator"></div>
                 <div class="editorial-info">
-                    <p>Redakcja. ul. Nebelgasse 12, Niederstadt, Danzig</p> <a class="contact-btn" href="kontakt.html">Skontaktuj się z nami</a>
+                    <p>Redakcja. ul. Nebelgasse 12, Niederstadt, Danzig</p> <a class="contact-btn" href="../kontakt.html">Skontaktuj się z nami</a>
                 </div>
             </div>
             <div class="vertical-strip"></div>
             <aside class="sidebar kontener-szary desktop-sidebar">
                 <div class="clock-calendar-row">
-                    <iframe class="clock-iframe" scrolling="no" src="swiss.html" title="Swiss Railway Clock">
+                    <iframe class="clock-iframe" scrolling="no" src="../swiss.html" title="Swiss Railway Clock">
 </iframe>
-                    <iframe class="calendar-iframe" scrolling="no" src="cal.html" title="Vintage Calendar">
+                    <iframe class="calendar-iframe" scrolling="no" src="../cal.html" title="Vintage Calendar">
 </iframe>
                 </div>
-                <iframe height="600" scrolling="no" src="wetter.html" style="border: none; max-width: 280px; display: block; margin: 0 auto; " width="100%"></iframe>
+                <iframe height="600" scrolling="no" src="../wetter.html" style="border: none; max-width: 280px; display: block; margin: 0 auto; " width="100%"></iframe>
                 <div class="support-newsletter-section">
-                    <iframe height="180" scrolling="no" src="support.html" style="border: none; max-width: 280px; display: block; margin: 0 auto; " width="100%">
+                    <iframe height="180" scrolling="no" src="../support.html" style="border: none; max-width: 280px; display: block; margin: 0 auto; " width="100%">
 </iframe>
                 </div>
                 <div class="ads google sidebar-bottom-ad">
@@ -132,9 +132,9 @@ Chcesz zostać na dłużej? Sprawdź noclegi w pobliżu Placu Przyjaciół Sopot
             </aside>
         </div>
         <div class="mobile-bottom-gadgets-container">
-            <iframe height="600" scrolling="no" src="wetter.html" style="border: none; max-width: 280px; display: block; margin: 0 auto; " width="100%"></iframe>
+            <iframe height="600" scrolling="no" src="../wetter.html" style="border: none; max-width: 280px; display: block; margin: 0 auto; " width="100%"></iframe>
             <div class="support-newsletter-section">
-                <iframe height="180" scrolling="no" src="support.html" style="border: none; max-width: 280px; display: block; margin: 0 auto; " width="100%">
+                <iframe height="180" scrolling="no" src="../support.html" style="border: none; max-width: 280px; display: block; margin: 0 auto; " width="100%">
 </iframe>
             </div>
             <div class="ads google sidebar-bottom-ad">
